deploy/kube/sso/database.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.0.28
        securityContext:
          runAsUser: 999
        ports:
        - name: mysql
          containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: db
spec:
  ports:
  - name: db
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    name: mariadb
