deploy/kube/sso/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sso
  labels:
    name: sso
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 10080
  - name: https
    port: 443
    targetPort: 10443
  sessionAffinity: ClientIP
  selector:
    name: sso
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sso
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: sso
        service: sso
      annotations:
        prometheus.io/port: "10000"
        prometheus.io/scheme: "http"
        prometheus.io/scrape: "true"
    spec:
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - sso
            topologyKey: "kubernetes.io/hostname"
      volumes:
      - name: certs
        emptyDir: {}
      containers:
      - name: nginx
        image: quay.io/ukhomeofficedigital/nginx-proxy:v3.4.24
        ports:
        - name: http
          containerPort: 10080
        - name: https
          containerPort: 10443
        volumeMounts:
        - name: certs
          mountPath: /certs
          readOnly: true
      - name: sso
        image: quay.io/ukhomeofficedigital/keycloak:v7.0.0
        args:
          - -b 0.0.0.0
        readinessProbe:
          httpGet:
            path: /auth/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          successThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /auth/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 360
          timeoutSeconds: 10
