deploy/kube/sso/gossip.yml
---
apiVersion: v1
kind: Service
metadata:
  name: "gossip-keycloak"
  labels:
    name: "gossip-keycloak"
spec:
  ports:
    - name: gossip-tcp
      protocol: TCP 
      port: 12001
      targetPort: 12001
  selector:
    name: "gossip-keycloak"
---
apiVersion: v1
kind: Service
metadata:
  name: "gossip-keycloak"
  labels:
    name: "gossip-keycloak"
spec:
  ports:
    - name: gossip-tcp
      protocol: TCP 
      port: 12001
      targetPort: 12001
  selector:
    name: "gossip-keycloak"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "gossip-keycloak"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: "gossip-keycloak"
        service: "gossip"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: cluster
                operator: In
                values:
                - "keycloak"
            topologyKey: "kubernetes.io/hostname"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: gossip
        image: quay.io/ukhomeofficedigital/jgroups-gossip:4.0.11.Final
        ports:
        - name: gossip
          containerPort: 12001
